Fixed whitespace mistakes

--- a/static/common.css
+++ b/static/common.css
@@ -68,3 +68,10 @@ nav{
     padding: 10px;
     margin: 2px;
 }
+
+/* post view */
+#post-content{
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word
+}
